[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "moonphase"
version = "1.0.3"
description = "Python library to calculate the moon phase angle and illuminated fraction for a given time."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[project.license]
file = "LICENSE"

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.urls]
Homepage = "https://github.com/domdfcoding/moonphase"
"Issue Tracker" = "https://github.com/domdfcoding/moonphase/issues"
"Source Code" = "https://github.com/domdfcoding/moonphase"

[tool.whey]
base-classifiers = []
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12", "3.13",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "MIT"

[tool.importcheck]

[tool.mypy]
python_version = "3.9"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]
